--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,11 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+.btn-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -41,9 +45,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 5px;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #0611ed;
 }
 button:focus,
 button:focus-visible {
@@ -59,6 +64,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #e2dede;
   }
 }
